# Wok

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  WokBrief  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: make_demo.py
recipes/: carbonara.wok  omelette.wok  pad_thai.wok
tests/: test_interpreter.py  test_lexer.py  test_parser.py
wok/: __init__.py  ast_nodes.py  cli.py  errors.py  interpreter.py  lexer.py  parser.py  stdlib.py
