[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wok"
version = "0.1.0"
description = "A tiny recipe-as-language interpreter: .wok files execute as programs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "wok" }]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wok = "wok.cli:main"

[tool.setuptools.packages.find]
include = ["wok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
