[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wok-lang"
version = "0.1.0"
description = "A tiny recipe-as-language interpreter: .wok files execute as programs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "santapong" }]
keywords = ["interpreter", "dsl", "programming-language", "recursive-descent", "learning", "recipes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Education",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/santapong/Wok"
Source = "https://github.com/santapong/Wok"
Issues = "https://github.com/santapong/Wok/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wok = "wok.cli:main"

[tool.setuptools.packages.find]
include = ["wok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
